move li into social tag to stop global bleed of style

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -102,7 +102,10 @@
             display: block;
             background-color: white;
         }
-        
+        li{
+            list-style: none;
+            display: inline;
+        }
 
     }
 
